# anker-solix-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
src/anker_solix_mcp/: __init__.py  __main__.py  _dev.py  client.py  config.py  http_auth.py  server.py  util.py
src/anker_solix_mcp/tools/: __init__.py  devices.py  energy.py  maintenance.py  sites.py  smartmeter.py  solarbank.py
tests/: test_http_auth.py  test_server.py  test_util.py
