[project]
name = "anker-solix-mcp"
version = "0.1.0"
description = "MCP server exposing Anker Solix Solarbank and Smartmeter data as tools for LLM agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Anker Solix MCP contributors" }]
dependencies = [
    "mcp[cli]>=1.6.0",
    "anker-solix-api @ git+https://github.com/thomluther/anker-solix-api.git",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
anker-solix-mcp = "anker_solix_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anker_solix_mcp"]

[tool.hatch.metadata]
# anker-solix-api is not published to PyPI; it's only installable via its git
# repository (see README). This is an end-user application, not a library
# meant to be published itself, so a direct URL dependency is fine here.
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
