[project]
name = "anker-solix-mcp"
version = "0.1.0"
description = "MCP server exposing Anker Solix Solarbank and Smartmeter data as tools for LLM agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Gerd Koenig" }]
dependencies = [
    "mcp[cli]>=1.28.1",
    "anker-solix-api @ git+https://github.com/thomluther/anker-solix-api.git",
    "python-dotenv>=1.0.1",
    # anker-solix-api's own runtime deps (aiohttp, aiofiles, paho-mqtt,
    # cryptography) declared below, pinned to match its pyproject.toml.
    # Its dependencies are `dynamic` there, resolved via a
    # [tool.poetry.dependencies] table with no [build-system] requiring
    # poetry-core - so installing it as a plain git dependency (as we do)
    # never actually pulls these in transitively; its own installed metadata
    # ends up with zero declared Requires-Dist. Must be listed here
    # explicitly or every real API call fails with ModuleNotFoundError.
    "aiohttp>=3.10.11",
    "aiofiles>=25.1.0",
    "paho-mqtt>=2.1.0",
    "cryptography>=3.4.8",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
    "pyright>=1.1.411",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.21",
]

[project.scripts]
anker-solix-mcp = "anker_solix_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anker_solix_mcp"]

[tool.hatch.metadata]
# anker-solix-api is not published to PyPI; it's only installable via its git
# repository (see README). This is an end-user application, not a library
# meant to be published itself, so a direct URL dependency is fine here.
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
